# cj-llm

./: Cargo.toml  IMPLEMENTATION.md  README.md
benches/: search_bench.rs
data/: examples.msgpack  model_config.txt
src/: data.rs  lib.rs  matcher.rs  model.rs  pattern.rs  rules.rs  search.rs  types.rs  vocab.rs
tests/: integration_tests.rs  matcher_tests.rs  search_tests.rs
