[package]
name = "cj-llm"
version = "0.3.0"
edition = "2021"
authors = ["OM <om@Mova.Club>"]
license = "MIT"
description = "CangJie pattern search with wildcard matching and intelligent ranking"
repository = "https://github.com/movapages/cj-llm"

[dependencies]
# ML framework
candle-core = { version = "0.8", features = ["accelerate"] }
candle-nn = "0.8"

# Pattern matching and data structures
regex = "1.10"
rustc-hash = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rmp-serde = "1.1"  # MessagePack for rules deserialization

# CLI and utilities
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"

# Training utilities
rand = "0.8"
rand_chacha = "0.3"

[[bin]]
name = "search"
path = "src/bin/search.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bench]]
name = "search_bench"
path = "benches/search_bench.rs"
harness = false
